# 5gscript

./: Cargo.toml  README.md
src/: main.rs
