[package]
name = "fix5g"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
glob = "0.3.1"
log = "0.4.17"
pretty_env_logger = "0.5.0"
xml-rs = "0.8.13"
xmltree = "0.10.3"
